# xlsx_to_csv

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
tests/: cli.rs
tests/expected/: all-options.csv  date-format.csv  date-format2.csv  datetime-format.csv  datetime-format2.csv  duration-hms.csv  include-errors.csv  no-options.csv  numeric-bool.csv  time-format.csv  time-format2.csv
tests/inputs/: custom-sheet.xlsx  types.xlsx
