[package]
name = "xlsx_to_csv"
version = "0.3.0"
edition = "2021"
author = "Josh Willing Halpern <josh@willingapps.com>"
description = "Converts XLSX files to CSV files"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.22.1"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
csv = "1.1.6"
