[package]
name = "xlsx_to_csv"
version = "0.5.0"
edition = "2021"
authors = ["Josh Willing Halpern <josh@willingapps.com>"]
description = "Converts XLSX files to CSV files"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = { version = "0.22.1", features = ["dates"] }
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
csv = "1.1.6"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
rand = "0.8.5"
tempfile = "3.8.0"
